...

function PreviewAccountSection({ subheader = 'With account' }: { subheader?: string }) {
  return (
    <AccountApproverSection
      subheader={subheader}
      avatar={<AccountAvatar />}
      name="Account 1"
      caption={truncateMiddle(previewAccountAddress)}
      titleRight={formatCurrency(previewBalance)}
      captionRight={formatCurrency(previewFiatBalance)}
    />
  );
}
...
