...

  if (!isShowing) return null;

  return (
    <>
      <Sheet
        header={<SheetHeader title={isManageMode ? 'Manage wallets' : 'Select account'} />}
        isShowing={isShowing}
        onClose={onClose}
        wrapChildren={false}
      >
        <VirtuosoWrapperSheet>
          <Box flex="1">
...
