appId: io.leather.mobilewallet
---
- launchApp
- runFlow: ../shared/clean-up.yaml
- runFlow:
    file: ../shared/add-wallet.yaml
- tapOn:
    id: 'homeAccountCard-0'
- assertVisible:
    text: 'Account 1'
- assertVisible:
    id: 'tokenBalanceItem-BTC'
- assertVisible:
    id: 'tokenBalanceItem-STX'
- assertVisible: 'Send'
- assertVisible: 'Receive'
- assertVisible: 'Swap'
- tapOn:
    id: 'backButton'
- assertNotVisible:
    id: 'backButton'
